# pypdf2-projects

./: .pdm.toml  README.md  pyproject.toml
njss/: extract-students.sh  isr-splitter.py
