[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
dependencies = [
    "pypdf2",
    "python-dotenv",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
